# bachelorthesis

./: .gitignore  CMakeLists.txt  README.md  main.cpp
ODESolvers/: functions.cpp  functions.h  geodeticsSolver.cpp  geodeticsSolver.h  oneStepSolver.cpp  oneStepSolver.h
convergence/: halfIntervalTester.cpp  halfIntervalTester.h
generators/: mainPlotsGenerators.cpp  mainPlotsGenerators.h
grid/: grid.cpp  grid.h  gridPoint.cpp  gridPoint.h  interpolator.cpp  interpolator.h
iofiles/: halfStepWriter.cpp  halfStepWriter.h  writers.cpp  writers.h
solver/: solverDICE.cpp  solverDICE.h
